Some long-overdue updates

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,12 +9,13 @@
         <h2>About Me</h2>
     </div>
     <div class="col s12 center-align">
-        I am a DevOps Engineer for <a href="https://www.hyland.com/" target="_blank">Hyland Software</a>.
+        I am a Site Reliability Engineer for <a href="https://starlink.com" target="_blank">Starlink</a> at <a href="https://spacex.com" target="_blank">SpaceX</a>.
         I've been interested in technology for as long as I can remember.
         I started taking apart electronics in my parents' garage when I
         was still in elementary school. From there, I taught myself Java,
-        and picked up C# and Go at my current Employer. I love Linux, Open
-        Source, and Technical Theatre, and I always appreciate a good challenge!
+        and picked up C# and Go, and became very familiar with Kubernetes.
+        I love Linux, Open Source, and Technical Theatre, and I always
+        appreciate a good challenge!
     </div>
 </div>
 <div class="row">
