--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,21 +2,21 @@
     <nav class="grey darken-4">
         <div class="nav-wrapper">
             <a href="/" class="site-title brand-logo">Nathan Lowe</a>
-            <a href="#" data-target="nav-mobile" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-desktop" class="right hide-on-med-and-down">
-                <li><a href="/cv">Resume</a></li>
-                <li><a href="/blog">Blog</a></li>
-                <li><a href="https://stackoverflow.com/story/nlowe" target="_blank"><img class="nav-icon-link" src="/so-icon.png" /></a></li>
+                <li><a href="https://stackoverflow.com/cv/nlowe" target="_blank">Resume</a></li>
+                <li><a href="https://dev.to/nlowe" target="_blank">Blog</a></li>
                 <li><a href="https://github.com/nlowe" target="_blank"><img class="nav-icon-link" src="/github.png" /></a></li>
                 <li><a href="https://twitter.com/_nlowe" target="_blank"><img class="nav-icon-link" src="/twitter.png" /></a></li>
+                <li><a href="https://www.linkedin.com/in/nathan-lowe-16634118b" target="_blank"><img class="nav-icon-link" src="/LI-In-Bug.png" /></a></li>
             </ul>
         </div>
     </nav>
 </div>
 <ul class="sidenav grey darken-4 grey-text text-lighten-4" id="nav-mobile">
-    <li><a href="/cv">Resume</a></li>
-    <li><a href="/blog">Blog</a></li>
-    <li><a href="https://stackoverflow.com/story/nlowe" target="_blank"><img class="nav-mobile-icon" src="/so-icon.png" /><span>Stack Overflow</span></a></li>
+    <li><a href="https://stackoverflow.com/cv/nlowe" target="_blank">Resume</a></li>
+    <li><a href="https://dev.to/nlowe" target="_blank">Blog</a></li>
     <li><a href="https://github.com/nlowe" target="_blank"><img class="nav-mobile-icon" src="/github.png" /><span>Github</span></a></li>
     <li><a href="https://twitter.com/_nlowe" target="_blank"><img class="nav-mobile-icon" src="/twitter.png" /><span>Twitter</span></a></li>
+    <li><a href="https://www.linkedin.com/in/nathan-lowe-16634118b" target="_blank"><img class="nav-mobile-icon" src="/LI-In-Bug.png" /><span>LinkedIn</span></a></li>
 </ul>
